--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 const link = document.getElementById('link').value;
 
                 const newLink = { name, link };
+		console.log(newLink);
                 links.push(newLink);
                 saveLinks();
                 renderLinks();
