--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     <h2>Saved Links</h2>
     <div id="linkList"></div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
