--- a/index.html
+++ b/index.html
@@ -4,49 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link Saver</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            max-width: 600px;
-            margin: auto;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 10px 15px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        #linkList a {
-            display: block;
-            margin: 5px 0;
-            text-decoration: none;
-            color: #007BFF;
-        }
-        #linkList a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <script defer src="js/script.js"></script>
 </head>
 <body>
-    <h1>Save Your Links</h1>
-    <input type="text" id="linkName" placeholder="Enter link name">
-    <input type="text" id="linkURL" placeholder="Enter link URL">
-    <button onclick="saveLink()">Save Link</button>
-
-    <h2>Saved Links</h2>
-    <div id="linkList"></div>
-
-    <script src="js/script.js"></script>
+    <h1>Link Saver</h1>
+    <form id="saveLinkForm">
+        <label for="linkName">Link Name:</label>
+        <input type="text" id="linkName" name="linkName" required>
+        <br>
+        <label for="linkURL">Link URL:</label>
+        <input type="url" id="linkURL" name="linkURL" required>
+        <br>
+        <button type="submit">Save Link</button>
+    </form>
+    <div id="result"></div>
 </body>
 </html>
