--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link Saver</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="js/script.js"></script>
 </head>
 <body>
-    <h1>Link Saver</h1>
-    <form id="saveLinkForm">
-        <label for="linkName">Link Name:</label>
-        <input type="text" id="linkName" name="linkName" required>
-        <br>
-        <label for="linkURL">Link URL:</label>
-        <input type="url" id="linkURL" name="linkURL" required>
-        <br>
-        <button type="submit">Save Link</button>
-    </form>
-    <div id="result"></div>
+    <div class="container">
+        <h1 class="title">Link Saver</h1>
+        <div class="form-container">
+            <input type="text" id="websiteName" placeholder="Enter website name" class="input-field">
+            <input type="url" id="websiteURL" placeholder="Enter website URL" class="input-field">
+            <button onclick="saveLink()" class="save-button">Save Link</button>
+        </div>
+        <div id="message" class="message"></div>
+    </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
