--- a/index.html
+++ b/index.html
@@ -4,7 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link Saver</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="">
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #1a1a1a;
+            color: #f1f1f1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            background-color: #2c2c2c;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            width: 1100px;
+            text-align: center;
+        }
+
+        .title {
+            font-size: 32px;
+            margin-bottom: 30px;
+            color: #ffcc00;
+        }
+
+        .input-field {
+            width: calc(100% - 24px);
+            padding: 15px;
+            margin-bottom: 20px;
+            border: 2px solid #333;
+            border-radius: 5px;
+            background-color: #3b3b3b;
+            color: #f1f1f1;
+            font-size: 18px;
+        }
+
+        .input-field::placeholder {
+            color: #ccc;
+        }
+
+        .save-button {
+            width: 100%;
+            padding: 15px;
+            background-color: #ff5733;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 20px;
+        }
+
+        .save-button:hover {
+            background-color: #e74c3c;
+        }
+
+        .message {
+            margin-top: 25px;
+            font-size: 16px;
+            color: #ffcc00;
+        }
+
+        .link-table {
+            width: 100%;
+            margin-top: 25px;
+            border-collapse: collapse;
+        }
+
+        .link-table th, .link-table td {
+            border: 2px solid #444;
+            padding: 12px;
+            font-size: 18px;
+        }
+
+        .link-table th {
+            background-color: #ff5733;
+            color: white;
+        }
+
+        .link-table td {
+            background-color: #3b3b3b;
+            color: #f1f1f1;
+        }
+
+        .link-table th.name-column, .link-table td.name-column {
+            width: 40%; /* Reduced width for the name column */
+        }
+
+        .link-table th.url-column, .link-table td.url-column {
+            width: 70%; /* Increased width for the URL column */
+        }
+
+        .link-table a {
+            color: #ffcc00;
+            text-decoration: none;
+        }
+
+        .link-table a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -15,6 +117,17 @@
             <button onclick="saveLink()" class="save-button">Save Link</button>
         </div>
         <div id="message" class="message"></div>
+        <table id="linkTable" class="link-table">
+            <thead>
+                <tr>
+                    <th class="name-column">Name</th>
+                    <th class="url-column">URL</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Links will be populated here -->
+            </tbody>
+        </table>
     </div>
     <script src="js/script.js"></script>
 </body>
