--- a/index.html
+++ b/index.html
@@ -1,134 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link Saver</title>
-    <link rel="stylesheet" href="">
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #1a1a1a;
-            color: #f1f1f1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Form with Table Tab</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
 
-        .container {
-            background-color: #2c2c2c;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-            width: 1100px;
-            text-align: center;
-        }
+    .navbar {
+      background-color: #007bff;
+      padding: 10px;
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      display: flex;
+      justify-content: flex-end;
+    }
 
-        .title {
-            font-size: 32px;
-            margin-bottom: 30px;
-            color: #ffcc00;
-        }
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      margin-left: 20px;
+    }
 
-        .input-field {
-            width: calc(100% - 24px);
-            padding: 15px;
-            margin-bottom: 20px;
-            border: 2px solid #333;
-            border-radius: 5px;
-            background-color: #3b3b3b;
-            color: #f1f1f1;
-            font-size: 18px;
-        }
+    .navbar a:hover {
+      text-decoration: underline;
+    }
 
-        .input-field::placeholder {
-            color: #ccc;
-        }
+    .form-container {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 350px;
+      margin: 100px auto;
+    }
 
-        .save-button {
-            width: 100%;
-            padding: 15px;
-            background-color: #ff5733;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 20px;
-        }
+    .form-container h2 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 20px;
+    }
 
-        .save-button:hover {
-            background-color: #e74c3c;
-        }
+    .form-container label {
+      display: block;
+      font-size: 14px;
+      color: #555;
+      margin-bottom: 8px;
+    }
 
-        .message {
-            margin-top: 25px;
-            font-size: 16px;
-            color: #ffcc00;
-        }
+    .form-container input[type="text"], 
+    .form-container input[type="url"] {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-size: 14px;
+    }
 
-        .link-table {
-            width: 100%;
-            margin-top: 25px;
-            border-collapse: collapse;
-        }
+    .form-container input[type="submit"] {
+      width: 100%;
+      padding: 12px;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
 
-        .link-table th, .link-table td {
-            border: 2px solid #444;
-            padding: 12px;
-            font-size: 18px;
-        }
-
-        .link-table th {
-            background-color: #ff5733;
-            color: white;
-        }
-
-        .link-table td {
-            background-color: #3b3b3b;
-            color: #f1f1f1;
-        }
-
-        .link-table th.name-column, .link-table td.name-column {
-            width: 40%; /* Reduced width for the name column */
-        }
-
-        .link-table th.url-column, .link-table td.url-column {
-            width: 70%; /* Increased width for the URL column */
-        }
-
-        .link-table a {
-            color: #ffcc00;
-            text-decoration: none;
-        }
-
-        .link-table a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    .form-container input[type="submit"]:hover {
+      background-color: #218838;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="title">Link Saver</h1>
-        <div class="form-container">
-            <input type="text" id="websiteName" placeholder="Enter website name" class="input-field">
-            <input type="url" id="websiteURL" placeholder="Enter website URL" class="input-field">
-            <button onclick="saveLink()" class="save-button">Save Link</button>
-        </div>
-        <div id="message" class="message"></div>
-        <table id="linkTable" class="link-table">
-            <thead>
-                <tr>
-                    <th class="name-column">Name</th>
-                    <th class="url-column">URL</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Links will be populated here -->
-            </tbody>
-        </table>
-    </div>
-    <script src="js/script.js"></script>
+
+  <!-- Top Navbar with Table Link -->
+  <div class="navbar">
+    <a href="table.html">View Saved Links</a>
+  </div>
+
+  <!-- Form Container -->
+  <div class="form-container">
+    <h2>Save Your Link</h2>
+    <form action="/save-url" method="POST">
+      <label for="url-name">URL Name</label>
+      <input type="text" id="url-name" name="url-name" placeholder="Enter name of the URL" required>
+
+      <label for="url">URL</label>
+      <input type="url" id="url" name="url" placeholder="Enter the URL" required>
+
+      <input type="submit" value="Save Link">
+    </form>
+  </div>
+
 </body>
 </html>
